# rwaybar

./: Cargo.toml  LICENSE  README.md
doc/: config.md  rwaybar.json  rwaybar.toml
src/: bar.rs  data.rs  dbus.rs  event.rs  font.rs  icon.rs  item.rs  main.rs  mpris.rs  pipewire.rs  pulse.rs  pulse_tokio.rs  render.rs  state.rs  sway.rs  tray.rs  util.rs  wayland.rs  wlr.rs
