[package]
name = "rwaybar"
version = "0.2.0"
authors = ["Daniel De Graaf <code@danieldg.net>"]
edition = "2021"
default-run = 'rwaybar'

[profile.dev]
# 400ms frames are more annoying than a bit more work on compile
opt-level = 1
panic = 'abort'

[profile.release]
panic = 'abort'
lto = true

[features]
default = ['pulse', 'dbus']
dbus = []
pulse = ['libpulse-binding']

[dependencies]
# Basic runtime
bytes = "*"
async-once-cell = "0.4"
env_logger = "0.9"
futures-channel = { version = "*" }
futures-util = { version = "*", features = ['channel'] }
json = "*"
libc = "*"
log = "*"
memmap2 = "0.5"
once_cell = "*"
serde = "1"
strfmt = "=0.1.6"
tokio = { version = "1", features = ['rt', 'net', 'signal', 'sync', 'io-util', 'time'] }
toml = "*"
xdg = "*"
xml-rs = "*"

# GUI
png = "0.17"
resvg = { version = "*", default-features = false }
#smithay-client-toolkit = { version = "*", default-features = false, git = "https://github.com/Smithay/client-toolkit.git", rev = "refs/heads/rework-wayland-rs-0.30" }
smithay-client-toolkit = { version = "*", default-features = false, path = "../smithay-client-toolkit" }
tiny-skia = "*"
ttf-parser = "*"
usvg = { version = "*", default-features = false }
wayland-client = { version = "0.30.0-beta.1" }
wayland-cursor = { version = "0.30.0-beta.1" }
wayland-protocols = { version = "0.30.0-beta.1", features = ['unstable', 'server'] }
wayland-protocols-wlr = { version = "0.1.0-beta.1" }
#wayland-client = { version = "0.30.0-alpha", path = "../smithay-wayland-rs/wayland-client" }
#wayland-cursor = { version = "0.30.0-alpha", path = "../smithay-wayland-rs/wayland-cursor" }
#wayland-protocols = { version = "0.30.0-alpha", features = ['unstable', 'server'], path = "../smithay-wayland-rs/wayland-protocols" }
#wayland-protocols-wlr = { version = "0.1.0-dev", path = "../smithay-wayland-rs/wayland-protocols-wlr" }

# Module specific
chrono = { version = "*", default-features = false, features = ['clock'] }
chrono-tz = "*"
evalexpr = "*"
libpulse-binding = { version = "*", features = ['pa_v14'], optional = true }
regex = "1.5"
zbus = { version = "2.1", default-features = false, features = ['tokio'] }
