[package]
name = "rwaybar"
version = "0.2.0"
authors = ["Daniel De Graaf <code@danieldg.net>"]
edition = "2021"
default-run = 'rwaybar'

[profile.dev]
# 400ms frames are more annoying than a bit more work on compile
opt-level = 1
panic = 'abort'

[profile.release]
panic = 'abort'
lto = true

[features]
default = ['pulse', 'dbus']
dbus = []
pulse = ['libpulse-binding', 'libpulse-tokio']

[dependencies]
# Basic runtime
bytes = "*"
async-once-cell = "0.5"
env_logger = "0.10"
futures-channel = { version = "*" }
futures-util = { version = "*", features = ['channel'] }
json = "*"
libc = "*"
log = "*"
memmap2 = "0.9"
once_cell = "*"
serde = "1"
strfmt = "=0.2.4"
tokio = { version = "1", features = ['rt', 'net', 'signal', 'sync', 'io-util', 'time'] }
toml = "0.8"
xdg = "*"
xml-rs = "*"

# GUI
png = "0.17"
resvg = { version = "0.36", default-features = false }
smithay-client-toolkit = { version = "0.18.1", default-features = false, git = "https://github.com/Smithay/client-toolkit.git", branch = "v0.18.1" }
#smithay-client-toolkit = { version = "*", default-features = false, path = "../smithay-client-toolkit" }
tiny-skia = "0.11"
ttf-parser = "*"
usvg = { version = "0.36", default-features = false }
wayland-client = { version = "0.31" }
wayland-cursor = { version = "0.31" }
wayland-protocols = { version = "0.31", features = ['unstable', 'server'] }
wayland-protocols-wlr = { version = "0.2" }

# Module specific
chrono = { version = "*", default-features = false, features = ['clock'] }
chrono-tz = "*"
evalexpr = "11"
libpulse-binding = { version = "*", features = ['pa_v14'], optional = true }
libpulse-tokio = { version = "0.1", optional = true }
regex = "1.5"
zbus = { version = "3", default-features = false, features = ['tokio'] }
